RESOLVED FIXED 88925
[CFNetwork] XMLHttpRequest incorrectly returns cached responses even when there is a Vary header field
https://bugs.webkit.org/show_bug.cgi?id=88925
Summary [CFNetwork] XMLHttpRequest incorrectly returns cached responses even when the...
Alexey Proskuryakov
Reported 2012-06-12 14:54:06 PDT
Event though WebCore cache has been taught to avoid caching XMLHttpRequests with Vary, this still happens in Safari. See also bug 58797, bug 71509, which are about mishandling Vary in other parts of WebCore cache.
Attachments
proposed fix (10.54 KB, patch)
2012-06-12 14:58 PDT, Alexey Proskuryakov
ddkilzer: review+
Alexey Proskuryakov
Comment 1 2012-06-12 14:58:06 PDT
Created attachment 147171 [details] proposed fix
David Kilzer (:ddkilzer)
Comment 2 2012-06-12 18:09:06 PDT
Comment on attachment 147171 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2012-06-14 10:42:43 PDT
Note You need to log in before you can comment on or make changes to this bug.