        [CFNetwork] XMLHttpRequest incorrectly returns cached responses even when there is a Vary header field         https://bugs.webkit.org/show_bug.cgi?id=88925

Reviewed by David Kilzer.

        Test: http/tests/cache/xhr-vary-header.html

        * platform/network/cf/ResourceHandleCFNet.cpp: (WebCore::willCacheResponse): Don't
        cache the response at all if there is a Vary header field. CFNetwork won't look at
        it if we allowed the response cached.

        * platform/network/mac/ResourceHandleMac.mm:
        (WebCore::ResourceHandle::createNSURLConnection): [NSURLResponse copy] is mutable
        in practice, but we should be nice, and use -mutableCopy.
        (-[WebCoreResourceHandleAsDelegate connection:willCacheResponse:]): Same fix as in
        CFNet code.



Canonical link: https://commits.webkit.org/106956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120339 268f45cc-cd09-0410-ab3c-d52691b4dbfc