Source/WebCore/platform/network/mac/ResourceHandleMac.mm
@@ -209,7 +209,7 @@ void ResourceHandle::createNSURLConnection(id delegate, bool shouldUseCredential
 
     NSURLRequest *nsRequest = firstRequest().nsURLRequest();
     if (!shouldContentSniff) {
-        NSMutableURLRequest *mutableRequest = [[nsRequest copy] autorelease];
+        NSMutableURLRequest *mutableRequest = [[nsRequest mutableCopy] autorelease];
         wkSetNSURLRequestShouldContentSniff(mutableRequest, NO);
         nsRequest = mutableRequest;
     }
@@ -885,6 +885,12 @@ String ResourceHandle::privateBrowsingStorageSessionIdentifierDefaultBase()
 #endif
 
     if (!m_handle || !m_handle->client())
+        return nil;
+
+    // Workaround for <rdar://problem/6300990> Caching does not respect Vary HTTP header.
+    // FIXME: WebCore cache has issues with Vary, too (bug 58797, bug 71509).
+    if ([[cachedResponse response] isKindOfClass:[NSHTTPURLResponse class]]
+        && [[(NSHTTPURLResponse *)[cachedResponse response] allHeaderFields] objectForKey:@"Vary"])
         return nil;
 
     NSCachedURLResponse *newResponse = m_handle->client()->willCacheResponse(m_handle, cachedResponse);
